--- a/src/main/webapp/pages/profile.html
+++ b/src/main/webapp/pages/profile.html
@@ -11,9 +11,13 @@
     <p>Фамилия: <span th:text="*{#object.lastName}">lastName</span></p>
     <p>Позиция: <span th:text="*{#object.position}">position</span></p>
     <p>Отдел: <span th:text="*{#object.department}">department</span></p>
+    <form th:action="@{/employee/{id}/update(id=*{#object.id})}" th:method="get">
+      <button>Редактировать</button>
+    </form>
     <form th:action="@{/employee/{id}(id=*{#object.id})}" th:method="delete">
       <button>Удалить</button>
     </form>
   </div>
+  <a th:href="@{/employee}">К списку сотрудников</a>
 </body>
 </html>
