Реализован основной функционал приложения

--- a/src/main/webapp/pages/employee/employee.html
+++ b/src/main/webapp/pages/employee/employee.html
@@ -6,6 +6,7 @@
     <title>Сотрудники</title>
 </head>
 <body>
+<h1>Сотрудники:</h1>
 <table>
     <thead>
     <tr>
@@ -27,6 +28,6 @@
     </tbody>
 </table>
 <a th:href="@{/employee/create}">Создать нового сотрудника</a><br/>
-<a th:href="@{/}">Назад</a>
+<a th:href="@{/}">Главная страница</a>
 </body>
 </html>
