--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Welcome</p>
-    <a th:href="@{/employee}">Сотрудники</a>
+    <a th:href="@{/employee}">Сотрудники</a><br/>
     <a th:href="@{/manager}">Руководители</a>
 </body>
 </html>
